[package]
name = "blog_os"
version = "0.1.0"
authors = ["xieyu <xieyu3@gmail.com>"]
edition = "2018"

[package.metadata.bootimage]
default-target="x86_64-blog_os.json"

[dependencies]
bootloader = "0.3.12"
volatile = "0.2.3"
spin = "0.4.9"
array-init = "0.0.3"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
