[package]
name = "hunt-the-wumpus"
version = "0.1.0"
authors = ["Yu Xie <yu.xie@horizon.ai>"]
edition = "2018"

[[bin]]
name = "hunt"
path = "src/main.rs"

[dependencies]
stdweb = "0.4"

[dependencies.yew]
git = "https://github.com/DenisKolodin/yew"

[lib]
name = "hunt_the_wumpus"
path = "src/lib.rs"
