[package]
name = "pb"
version = "0.1.0"
authors = ["xieyu <xieyu3@gmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
futures = "0.1"
grpcio = {version="0.5.0-alpha.1", features=["prost-codec"]}
bytes = "0.4"
prost = "0.5"
prost-derive = "0.5"
protobuf = "~2.2"

[build-dependencies]
grpcio-compiler = "0.5.0-alpha"
protobuf-build = "0.2"
prost = "0.5"
prost-types = "0.5"
protobuf = "~2.2"
protobuf-codegen = "~2.2"
protoc-rust = "2.0"
protoc-grpcio = "1.0.2"
